# -SZE-MOSZE-2020-AMD_Bike

./: .gitignore  Character.cpp  Character.h  Character_8h_source.html  Damage.h  Damage_8h_source.html  Game.cpp  Game.h  Game_8h_source.html  Hero.cpp  Hero.h  Hero_8h_source.html  JSON.cpp  JSON.h  JSON_8h_source.html  JsonParser.cpp  JsonParser.h  JsonParser_8h_source.html  Makefile  Map.cpp  Map.h  Map_8h_source.html  MarkedMap.cpp  MarkedMap.h  MarkedMap_8h_source.html  Monster.cpp  Monster.h  Monster_8h_source.html  Player.cpp  Player.h  Player_8h_source.html  PreparedGame.cpp  PreparedGame.h  PreparedGame_8h_source.html  README.md  Renderer.h  Renderer_8h_source.html  Report.md  SVGRenderer.cpp  SVGRenderer.h  (+127 more)
docker/: Dockerfile
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  (+50 more)
test/: CMakeLists.txt  Makefile  UnitTest.cpp
test/maps/: Map2.json  maps.json  markedmap2.txt
test/outputs/: preparedgame2_output.txt  preparedgame_output.txt  scenario1_output.txt  scenario1game_output.txt  scenario2_output.txt  scenario2game_output.txt
test/scenarios/: [prepared]game.json  preparedgame.json  preparedgame.txt  preparedgame2.json  preparedgame2.txt  scenario1game.txt  scenario2game.txt
test/units/: Blood_Raven.json  Dark_Wanderer.json  DifferentLuke.json  Fallen.json  Luke.json  NoKeyLuke.json  NoValueLuke.json  Vader.json  WhitespaceLuke.json  WrongLuke.json  Yoda.json  Zombie.json  hero.json  heros.json  monsters.json  units.json
(+8 files in other folders)
